force-app/main/default/objects/scormanywhere__Course__c/scormanywhere__Course__c.object-meta.xml
<CustomObject>
    <label>Media</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Media</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>