force-app/main/default/objects/scormanywhere__Course__c/fields/Audience__c.field-meta.xml
<CustomField>
    <fullName>Audience__c</fullName>
    <description>Used for before login (guest) help page.</description>
    <label>Audience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Guest</fullName>
            </value>
            <value>
                <fullName>Citizen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>