force-app/main/default/objects/scormanywhere__Course__c/fields/Guest_Video_URL__c.field-meta.xml
<CustomField>
    <fullName>Guest_Video_URL__c</fullName>
    <description>Stores public URL of the video for guest users.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Guest Video URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>