force-app/main/default/objects/scormanywhere__Course__c/fields/Public_URL__c.field-meta.xml
<CustomField>
    <fullName>Public_URL__c</fullName>
    <description>Used for before login (guest) help page.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Public URL</label>
    <type>Url</type>
</CustomField>