force-app/main/default/objects/scormanywhere__Course__c/fields/scormanywhere__Avg_Stars__c.field-meta.xml
<CustomField>
    <fullName>scormanywhere__Avg_Stars__c</fullName>
    <formula>scormanywhere__Total_Stars__c /  IF(scormanywhere__Total_Votes__c != 0, scormanywhere__Total_Votes__c , 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg Stars</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>