force-app/main/default/objects/scormanywhere__Course__c/fields/scormanywhere__Community_Path__c.field-meta.xml
<CustomField>
    <fullName>scormanywhere__Community_Path__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Community Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>