force-app/main/default/objects/scormanywhere__Course__c/fields/scormanywhere__Completion_Progress_Threshold__c.field-meta.xml
<CustomField>
    <fullName>scormanywhere__Completion_Progress_Threshold__c</fullName>
    <description>The minimum percent for video course was completed</description>
    <label>Completion Progress Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>