force-app/main/default/objects/scormanywhere__Course__c/fields/scormanywhere__Course_Version__c.field-meta.xml
<CustomField>
    <fullName>scormanywhere__Course_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Media Version</label>
    <referenceTo>scormanywhere__Course_Version__c</referenceTo>
    <relationshipLabel>Media</relationshipLabel>
    <relationshipName>Courses</relationshipName>
    <type>Lookup</type>
</CustomField>