force-app/main/default/objects/scormanywhere__Course__c/fields/scormanywhere__Description__c.field-meta.xml
<CustomField>
    <fullName>scormanywhere__Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>