force-app/main/default/objects/scormanywhere__Course__c/fields/scormanywhere__Disable_Autoplay__c.field-meta.xml
<CustomField>
    <fullName>scormanywhere__Disable_Autoplay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Autoplay</label>
    <type>Checkbox</type>
</CustomField>