force-app/main/default/objects/scormanywhere__Course__c/fields/scormanywhere__Duration__c.field-meta.xml
<CustomField>
    <fullName>scormanywhere__Duration__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Duration</label>
    <length>20</length>
    <type>Text</type>
</CustomField>