force-app/main/default/objects/scormanywhere__Course__c/fields/scormanywhere__Enable_All_External_Users__c.field-meta.xml
<CustomField>
    <fullName>scormanywhere__Enable_All_External_Users__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable For All External Users</label>
    <type>Checkbox</type>
</CustomField>