force-app/main/default/objects/scormanywhere__Course__c/fields/scormanywhere__Mute__c.field-meta.xml
<CustomField>
    <fullName>scormanywhere__Mute__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mute</label>
    <type>Checkbox</type>
</CustomField>