force-app/main/default/objects/scormanywhere__Course__c/fields/scormanywhere__Public__c.field-meta.xml
<CustomField>
    <fullName>scormanywhere__Public__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Public</label>
    <type>Checkbox</type>
</CustomField>