force-app/main/default/objects/scormanywhere__Course__c/fields/scormanywhere__SCORM_File_Size__c.field-meta.xml
<CustomField>
    <fullName>scormanywhere__SCORM_File_Size__c</fullName>
    <label>SCORM File Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>