force-app/main/default/objects/scormanywhere__Course__c/fields/scormanywhere__SCORM_Keywords__c.field-meta.xml
<CustomField>
    <fullName>scormanywhere__SCORM_Keywords__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Keywords need to be separated by commas</inlineHelpText>
    <label>Keywords</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>