force-app/main/default/objects/scormanywhere__Course__c/fields/scormanywhere__SCORM_Language__c.field-meta.xml
<CustomField>
    <fullName>scormanywhere__SCORM_Language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>en_US</fullName>
                
                
                    <label>en_US</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>