force-app/main/default/objects/scormanywhere__Course__c/fields/scormanywhere__SCORM_Manifest_Data_Part_3__c.field-meta.xml
<CustomField>
    <fullName>scormanywhere__SCORM_Manifest_Data_Part_3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SCORM Manifest Data Part 3</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>