force-app/main/default/objects/scormanywhere__Course__c/fields/scormanywhere__SCORM_Manifest_Data_Part_4__c.field-meta.xml
<CustomField>
    <fullName>scormanywhere__SCORM_Manifest_Data_Part_4__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SCORM Manifest Data Part 4</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>