force-app/main/default/objects/scormanywhere__Course__c/fields/scormanywhere__SCORM_Title__c.field-meta.xml
<CustomField>
    <fullName>scormanywhere__SCORM_Title__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SCORM Title</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>