force-app/main/default/objects/scormanywhere__Course__c/fields/scormanywhere__SCORM_Training_Type__c.field-meta.xml
<CustomField>
    <fullName>scormanywhere__SCORM_Training_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SCORM Training Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>