force-app/main/default/objects/scormanywhere__Course__c/fields/scormanywhere__Source__c.field-meta.xml
<CustomField>
    <fullName>scormanywhere__Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Community</fullName>
                
                
                    <label>Community</label>
                
                </value>
            
                <value>
                
                    <fullName>Integration</fullName>
                
                
                    <label>Integration</label>
                
                </value>
            
                <value>
                
                    <fullName>Original Media</fullName>
                
                
                    <label>Original Media</label>
                
                </value>
            
                <value>
                
                    <fullName>Related Media</fullName>
                
                
                    <label>Related Media</label>
                
                </value>
            
                <value>
                
                    <fullName>Chatter</fullName>
                
                
                    <label>Chatter</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>