force-app/main/default/objects/scormanywhere__Course__c/fields/scormanywhere__Status__c.field-meta.xml
<CustomField>
    <fullName>scormanywhere__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Active</fullName>
                
                
                    <label>Active</label>
                
                </value>
            
                <value>
                
                    <fullName>Inactive</fullName>
                
                
                    <label>Inactive</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>