force-app/main/default/objects/scormanywhere__Course__c/fields/scormanywhere__Test_Progress__c.field-meta.xml
<CustomField>
    <fullName>scormanywhere__Test_Progress__c</fullName>
    <formula>scormanywhere__Test_Transcript__r.scormanywhere__Progress__c</formula>
    <label>Test Progress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>