force-app/main/default/objects/scormanywhere__Course__c/fields/scormanywhere__Test_Score__c.field-meta.xml
<CustomField>
    <fullName>scormanywhere__Test_Score__c</fullName>
    <formula>IF( ISNULL( scormanywhere__Test_Transcript__c ), &apos;&apos;,   TEXT(ROUND(scormanywhere__Test_Transcript__r.scormanywhere__Score__c, 0)))</formula>
    <label>Test Score</label>
    <type>Text</type>
</CustomField>