force-app/main/default/objects/scormanywhere__Course__c/fields/scormanywhere__Test_Status__c.field-meta.xml
<CustomField>
    <fullName>scormanywhere__Test_Status__c</fullName>
    <formula>scormanywhere__Test_Transcript__r.scormanywhere__Status__c</formula>
    <label>Test Status</label>
    <type>Text</type>
</CustomField>