force-app/main/default/objects/scormanywhere__Course__c/fields/scormanywhere__Test_Transcript__c.field-meta.xml
<CustomField>
    <fullName>scormanywhere__Test_Transcript__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Transcript</label>
    <referenceTo>scormanywhere__Transcript__c</referenceTo>
    <relationshipName>Courses</relationshipName>
    <type>Lookup</type>
</CustomField>