force-app/main/default/objects/scormanywhere__Course__c/fields/scormanywhere__Tested_By__c.field-meta.xml
<CustomField>
    <fullName>scormanywhere__Tested_By__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp; scormanywhere__Test_Transcript__r.scormanywhere__User__c, scormanywhere__Test_Transcript__r.scormanywhere__User__r.FirstName &amp; &apos; &apos; &amp; scormanywhere__Test_Transcript__r.scormanywhere__User__r.LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tested By</label>
    <type>Text</type>
</CustomField>