force-app/main/default/objects/scormanywhere__Course__c/fields/scormanywhere__Tested_Date__c.field-meta.xml
<CustomField>
    <fullName>scormanywhere__Tested_Date__c</fullName>
    <formula>scormanywhere__Test_Transcript__r.scormanywhere__Launch_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tested Date</label>
    <type>DateTime</type>
</CustomField>