force-app/main/default/objects/scormanywhere__Course__c/fields/scormanywhere__Thumbnail_Path__c.field-meta.xml
<CustomField>
    <fullName>scormanywhere__Thumbnail_Path__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Thumbnail Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>