force-app/main/default/objects/scormanywhere__Course__c/fields/scormanywhere__Total_Unique_Views__c.field-meta.xml
<CustomField>
    <fullName>scormanywhere__Total_Unique_Views__c</fullName>
    <label>Total Unique Views</label>
    <summaryForeignKey>scormanywhere__Transcript_Stats__c.scormanywhere__Course__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>