force-app/main/default/objects/scormanywhere__Course__c/fields/scormanywhere__Total_Votes__c.field-meta.xml
<CustomField>
    <fullName>scormanywhere__Total_Votes__c</fullName>
    <label>Total Votes</label>
    <summarizedField>scormanywhere__Transcript_Stats__c.scormanywhere__Votes__c</summarizedField>
    <summaryForeignKey>scormanywhere__Transcript_Stats__c.scormanywhere__Course__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>