force-app/main/default/objects/scormanywhere__Course__c/fields/scormanywhere__Uploaded_Org_Id__c.field-meta.xml
<CustomField>
    <fullName>scormanywhere__Uploaded_Org_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Uploaded Org Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>