force-app/main/default/objects/scormanywhere__Course__c/fields/scormanywhere__Version__c.field-meta.xml
<CustomField>
    <fullName>scormanywhere__Version__c</fullName>
    <label>Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>