force-app/main/default/objects/scormanywhere__Course__c/listViews/scormanywhere__All.listView-meta.xml
<ListView>
    <fullName>scormanywhere__All</fullName>
    <columns>NAME</columns>
    <columns>scormanywhere__Description__c</columns>
    <columns>scormanywhere__Status__c</columns>
    <columns>scormanywhere__Duration__c</columns>
    <columns>scormanywhere__SCORM_Keywords__c</columns>
    <columns>scormanywhere__SCORM_Language__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>scormanywhere__Version__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>